# schema_transpose

./: .gitattributes  README.md  makefile  pyproject.toml  setup.cfg
.github/workflows/: pypi.yaml
docs/dev/: cli.md  settings.md
py2tf/: _version.py  validators.py
schema_transpose/: _version.py  cli.py
schema_transpose/conf/: settings.py
schema_transpose/converters/: jinja.py  markdown.py
schema_transpose/templates/: hcl.tf  module_params.tf  module_wrapper.tf  variable.tfvars
tests/: test_jinja.py  test_markdown.py
