[metadata]
name = py2tf
description = Convert Pydantic Models into Terraform Variables
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[versioneer]
VCS = git
style = pep440
versionfile_source = py2tf/_version.py
versionfile_build = py2tf/_version.py
tag_prefix = v
parentdir_prefix = 

[options]
packages = find:
include_package_data = True
install_requires = 
	pydantic
	typer
	jinja2
	glom
	py-markdown-table

[options.extras_require]
dev = 
	black
	build
	glom
	isort
	mypy
	pytest
	pytest-cov
	versioneer

[options.entry_points]
console_scripts = 
	py2tf = py2tf.cli:app

[options.package_data]
py2tf.templates = 
	*.tf
	*.tfvars

[egg_info]
tag_build = 
tag_date = 0

