[metadata]
name = schema_transpose
description = A python library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[versioneer]
VCS = git
style = pep440
versionfile_source = schema_transpose/_version.py
versionfile_build = schema_transpose/_version.py
tag_prefix = v
parentdir_prefix =

[options]
packages = find:
include_package_data = True
install_requires =
	pydantic
	typer
	jinja2
	glom
	py-markdown-table

[options.extras_require]
dev =
	black
	build
  dapperdata
	glom
	isort
	mypy
  pip-tools
	pytest
	pytest-pretty
	versioneer
  ruamel.yaml

[options.entry_points]
console_scripts =
  schema_transpose = schema_transpose.cli:app

[options.package_data]
schema_transpose = py.typed
schema_transpose.templates =
	*.tf
	*.tfvars

[egg_info]
tag_build =
tag_date = 0
